correção nome imagem

--- a/produtos.html
+++ b/produtos.html
@@ -38,7 +38,7 @@
 			</li>
 			<li>
 				<h2>Cabelo + Barba</h2>
-				<img src="img/cabelo+barba2.jpg">
+				<img src="img/cabelo_barba2.jpg">
 				<p class="produto-descricao">Pacote completo de cabelo e barba</p>
 				<p class="produto-preco">R$ 35,00</p>
 			</li>
