--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width">
 	<title>Home - Barbearia Alura</title>
-	<!-- <link rel="stylesheet" href="style/normalize.css"> -->
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/reset.css">
+	<link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
