--- a/produtos.html
+++ b/produtos.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width">
 	<title>Produtos - Barbearia Alura</title>
+	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" href="style/style.css">
 </head>
