--- a/index.html
+++ b/index.html
@@ -1,84 +1,108 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home - Barbearia Alura</title>
+    <link rel="stylesheet" href="style/normalize.css" />
+    <link rel="stylesheet" href="style/reset.css" />
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width-device-width">
-	<title>Home - Barbearia Alura</title>
-	<link rel="stylesheet" href="style/normalize.css">
-	<link rel="stylesheet" href="style/reset.css">
-	<link rel="stylesheet" href="style/style.css">
-</head>
+  <body>
+    <header class="inicial">
+      <div class="caixa">
+        <h1><img src="img/logo.png" alt="Logo da Barbearia Alura" /></h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <img class="banner" src="img/banner.jpg" />
+    <main>
+      <section class="principal">
+        <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-<body>
-	<header class="inicial">
-		<div class="caixa">
-			<h1><img src="img/logo.png" alt="Logo da Barbearia Alura"></h1>
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="produtos.html">Produtos</a></li>
-					<li><a href="contato.html">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header><img class="banner" src="img/banner.jpg">
-	<main>
-		<section class="principal">
-			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+        <img
+          class="utensilios"
+          src="img/utensilios.jpg"
+          alt="Utensílios de um barbeiro."
+        />
 
-			<img class="utensilios" src="img/utensilios.jpg" alt="Utensílios de um barbeiro.">
+        <p>
+          Localizada no coração da cidade a
+          <strong>Barbearia Alura</strong> traz para o mercado o que há de
+          melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura
+          já é destaque na cidade e conquista novos clientes a cada dia.
+        </p>
 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
-				clientes a cada dia.</p>
+        <p id="missao">
+          <em
+            >Nossa missão é:
+            <strong
+              >"Proporcionar auto-estima e qualidade de vida aos
+              clientes"</strong
+            >.</em
+          >
+        </p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
-						clientes"</strong>.</em></p>
+        <p>
+          Oferecemos profissionais experientes e antenados às mudanças no mundo
+          da moda. O atendimento possui padrão de excelência e agilidade,
+          garantindo qualidade e satisfação dos nossos clientes.
+        </p>
+      </section>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
-				padrão de
-				excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</section>
+      <section class="mapa">
+        <h3 class="titulo-principal">Localização</h3>
+        <p>Nosso salão está localizado no coração da cidade.</p>
+        <div class="mapa-conteudo">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14626.947955906384!2d-48.04264033022465!3d-23.577887799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5cc8ecc62b86b%3A0x52637e86ccc0517a!2sMr%20Carriel%20Barbearia%20%F0%9F%92%88!5e0!3m2!1spt-BR!2sbr!4v1654818154405!5m2!1spt-BR!2sbr"
+            width="100%"
+            height="300"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
 
-		<section class="mapa">
-			<h3 class="titulo-principal">
-				Localização
-			</h3>
-			<p>Nosso salão está localizado no coração da cidade.</p>
-			<div class="mapa-conteudo">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14626.947955906384!2d-48.04264033022465!3d-23.577887799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5cc8ecc62b86b%3A0x52637e86ccc0517a!2sMr%20Carriel%20Barbearia%20%F0%9F%92%88!5e0!3m2!1spt-BR!2sbr!4v1654818154405!5m2!1spt-BR!2sbr"
-					width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade"></iframe>
-			</div>
-		</section>
+      <section class="beneficios">
+        <h3 class="titulo-principal">Benefícios</h3>
+        <div class="conteudo-beneficios">
+          <ul class="lista-beneficios">
+            <li class="itens">Atendimento aos Clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais Qualificados</li>
+            <li class="itens">Pontualidade</li>
+            <li class="itens">Higiene</li>
+          </ul>
+          <img src="img/beneficios.jpg" class="imagem-beneficios" />
+        </div>
+        <div class="video">
+          <iframe
+            width="100%"
+            height="315"
+            src="https://www.youtube.com/embed/wcVVXUV0YUY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+    </main>
 
-		<section class="beneficios">
-			<h3 class="titulo-principal">Benefícios</h3>
-			<div class="conteudo-beneficios">
-				<ul class="lista-beneficios">
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Profissionais Qualificados</li>
-					<li class="itens">Pontualidade</li>
-					<li class="itens">Higiene</li>
-				</ul><img src="img/beneficios.jpg" class="imagem-beneficios">
-			</div>
-			<div class="video">
-				<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY"
-					title="YouTube video player" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen></iframe>
-			</div>
-		</section>
-	</main>
-
-	<footer>
-		<img src="img/logo-branco.png">
-		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
-	</footer>
-</body>
-
+    <footer>
+      <img src="img/logo-branco.png" />
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
+  </body>
 </html>
